# GeoVer

deploy/exercises/: CMakeLists.txt
deploy/libcogra/: CMakeLists.txt  ChangeLog.md  Doxyfile.in  LICENSE.txt  README.md
deploy/libcogra/buildutils/: AddAllSubdirectories.cmake  BuildOptions.cmake  CMakeListsDeployTemplate.txt  CreateApp.cmake  CreateAssignmentSolution.ps1  CreateAssignmentStub.ps1  CreateSourceGroups.cmake  DeploySourceCode.cmake  ErrofIfBuildDirectoryIsSourceDirectory.cmake  FindIPP.cmake  FindMKL.cmake  FindVTune.cmake
deploy/libcogra/contrib/: CMakeLists.txt
deploy/libcogra/contrib/CMakeProjects/: CMakeLists.txt
deploy/libcogra/contrib/CMakeProjects/glad/: CMakeLists.txt
deploy/libcogra/contrib/CMakeProjects/glad/include/glad/: glad.h
deploy/libcogra/contrib/CMakeProjects/glad/src/: glad.c
deploy/libcogra/contrib/CMakeProjects/imgui/: CMakeLists.txt
deploy/libcogra/contrib/CMakeProjects/tinyfd/: CMakeLists.txt  hello.c  hello_wchar_t.c  readme displayed below (extract from header file).txt
deploy/libcogra/contrib/submodules/: CMakeLists.txt
deploy/libcogra/contrib/submodules/googletest/googletest/src/: gtest.cc
deploy/libcogra/contrib/submodules/spdlog/: README.md
deploy/libcogra/doc/: Logging.md  Overview.md
deploy/libcogra/doc/Processes/: DevelopmentProcess.md  ReleaseAVersion.md
deploy/libcogra/doc/Processes/CMake/: CreateAVisualStudioProject.md
deploy/libcogra/doc/Processes/Git/: AddNewSubmodule.md  BackwardIntegration.md  ForwardIntegration.md  LargeBinaryData.md  NewRepositoryThatSubmodulesLibCogra.md
deploy/libcogra/libcogra/: CMakeLists.txt
deploy/libcogra/libcogra/impl/: cograconfig.h
deploy/libcogra/libcogra/impl/exceptions/: RuntimeError.cpp
deploy/libcogra/libcogra/impl/gl/: FrameTime.cpp  GLDebug.cpp  GLSLProgram.cpp  GLSLRuntimeError.cpp  GLSLShader.cpp  MeshShaderConstants.cpp  OpenGLRuntimeError.cpp  OpenGLStatic.cpp  PerformanceQueries.cpp  Sampler.cpp  Screenshot.cpp  TaskShaderConstants.cpp  Texture.cpp  Texture1D.cpp  Texture2D.cpp  TextureBuffer.cpp  UniformBuffer.cpp
deploy/libcogra/libcogra/impl/graphics/drawable/: AABB3Drawable.cpp  Drawable.cpp  FrustumDrawable.cpp  MeshDrawable.cpp  MeshDrawableFactory.cpp  PolyLineDrawable.cpp  ScreenFillingPrimitive.cpp  VertexAttributeTypeInfo.cpp
deploy/libcogra/libcogra/impl/graphics/geometry/: IndexGrid.cpp  SphereGeometry.cpp  TriangleTools.cpp  TriangleTopology.cpp
deploy/libcogra/libcogra/impl/imageprocessing/: Image.cpp
deploy/libcogra/libcogra/impl/io/: CograBinaryMeshFile.cpp  CubicBezierPatchLoader.cpp  Log.cpp  stb_image_impl.cpp
deploy/libcogra/libcogra/impl/tools/: NormalizeFilename.cpp  Timer.cpp
deploy/libcogra/libcogra/impl/ui/: BlinnPhongWidget.cpp  ExaminerController.cpp  ExaminerControllerApp.cpp  FileDialog.cpp  FirstPersonCamera.cpp  GLFWApp.cpp  GLInformationWidget.cpp  ImGUIGL.cpp  ImGUIGLFW.cpp  ImGUIGLFW3Renderer.cpp  PitchShiftControl.cpp  PointDragger.cpp  TimeControl.cpp  TimeControlUI.cpp  TrackballControl.cpp  WireFrameWidget.cpp
deploy/libcogra/libcogra/impl/ui/noc/: noc_file_dialog.h
deploy/libcogra/libcogra/interface/cogra/: constants.h  eigen.h  system.h  types.h
deploy/libcogra/libcogra/interface/cogra/exceptions/: RuntimeError.h
deploy/libcogra/libcogra/interface/cogra/gl/: BufferEnums.h  FrameTime.h  GLDebug.h  GLSLProgram.h  GLSLRuntimeError.h  GLSLShader.h  MeshShaderConstants.h  OpenGLRuntimeError.h  OpenGLStatic.h  PerformanceQueries.h  Sampler.h  Screenshot.h  TaskShaderConstants.h  Texture.h  Texture1D.h  Texture2D.h  TextureBuffer.h  TextureEnums.h  UniformBuffer.h
deploy/libcogra/libcogra/interface/cogra/graphics/drawable/: AABB3Drawable.h  Drawable.h  FrustumDrawable.h  MeshDrawable.h  MeshDrawableFactory.h  PolyLineDrawable.h  ScreenFillingPrimitive.h  SkyBox.h  VertexAttributeTypeInfo.h
deploy/libcogra/libcogra/interface/cogra/graphics/geometry/: AxisAlignedBoundingBox.h  CorrespondingTypes.h  Distance.h  IndexGrid.h  InsideOutsideTests.h  IntrinsicCamera.h  MathTools.h  Plane.h  SphereGeometry.h  TriangleTools.h  TriangleTopology.h
deploy/libcogra/libcogra/interface/cogra/imageprocessing/: Image.h  ImageCompressionMetrics.h  ImageQualityMetrics.h
deploy/libcogra/libcogra/interface/cogra/io/: CograBinaryMeshFile.h  CubicBezierPatchLoader.h  Log.h
deploy/libcogra/libcogra/interface/cogra/tools/: NormalizeFilename.h  Timer.h
deploy/libcogra/libcogra/interface/cogra/ui/: BlinnPhongWidget.h  ExaminerController.h  ExaminerControllerApp.h  FileDialog.h  FirstPersonCamera.h  GLFWApp.h  GLFWWindow.h  GLFWWindowConfig.h  GLInformationWidget.h  ImGUIGL.h  ImGUIGLFW.h  ImGUIGLFW3Renderer.h  PitchShiftControl.h  PointDragger.h  TimeControl.h  TimeControlUI.h  TrackballControl.h  WireFrameWidget.h
deploy/libcogra/samples/: CMakeLists.txt
deploy/libcogra/samples/EigenTest/: CMakeLists.txt  main.cpp
deploy/libcogra/samples/Helloimgui/: CMakeLists.txt  main.cpp
deploy/libcogra/samples/MKLTest/: CMakeLists.txt  MKLTest.cpp
deploy/libcogra/samples/ProjectWithTests/: CMakeLists.txt  ExampleFunctions.cpp  ExampleFunctions.h  ProjectWithTests.cpp
deploy/libcogra/samples/ProjectWithTests/tests/: ExampleFunction_test.cpp
deploy/libcogra/samples/SimpleOpenCL/: CMakeLists.txt  SimpleOpenCL.cpp
deploy/libcogra/samples/SimpleTriangle/: CMakeLists.txt  SimpleTriangle.cpp
deploy/libcogra/samples/SimpleTriangle/shaders/: triangle.frag.glsl  triangle.vert.glsl
deploy/libcogra/samples/SimpleTriangleBinary/: CMakeLists.txt  SimpleTriangleBinary.cpp
deploy/libcogra/samples/SimpleTriangleBinary/shaders/: frag.spv  triangle.frag  triangle.vert  vert.spv
deploy/libcogra/samples/glmTest/: CMakeLists.txt  main.cpp
deploy/libcogra/samples/logtest/: CMakeLists.txt  main.cpp
deploy/libcogra/tests/: CMakeLists.txt
deploy/libcogra/tests/contrib/: CMakeLists.txt
deploy/libcogra/tests/contrib/SmokeTests/: CMakeLists.txt  GLFWSmokeTest.cpp  gladSmokeTest.cpp  glmSmokeTest.cpp
deploy/libcogra/tests/libcogra/: CMakeLists.txt
deploy/libcogra/tests/libcogra/graphics/geometry/: MathTools.cpp
(+18 files in other folders)
