add_subdirectory(Helloimgui)
#add_subdirectory(SimpleTriangle)
add_subdirectory(SimpleTriangleBinary)
add_subdirectory(EigenTest)
#add_subdirectory(logtest)
add_subdirectory(glmTest)
# add_subdirectory(SimpleOpenCL)
#add_subdirectory(MKLTest)

set_target_properties (Helloimgui PROPERTIES FOLDER cogra/samples)
#set_target_properties (SimpleTriangle PROPERTIES FOLDER cogra/samples)
set_target_properties (SimpleTriangleBinary PROPERTIES FOLDER cogra/samples)
set_target_properties (EigenTest PROPERTIES FOLDER cogra/samples)
#set_target_properties (logtest PROPERTIES FOLDER cogra/samples)
set_target_properties (glmTest PROPERTIES FOLDER cogra/samples)
# set_target_properties (SimpleOpenCL PROPERTIES FOLDER cogra/samples)
#set_target_properties (MKLTest PROPERTIES FOLDER cogra/samples)

add_subdirectory(ProjectWithTests)
set_target_properties (ProjectWithTests PROPERTIES FOLDER cogra/samples)
set_target_properties (ProjectWithTests_lib PROPERTIES FOLDER cogra/samples)
set_target_properties (ProjectWithTests_test PROPERTIES FOLDER cogra/samples)
